--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "refus giwa polytechnic staff multipurpose system ",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "develope": "nodemon server.js"
   },
   "keywords": [
     "Staff",
@@ -13,8 +14,11 @@
   "author": "Elechi George",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7"
+    "express-validator": "^6.10.1",
+    "mongoose": "^5.12.7",
+    "mongoose-timestamp": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
