resolved memebership errors

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "develop": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "Staff",
